--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
     </build>
     <dependencies>
         <dependency>
+            <groupId>dev.morphia.morphia</groupId>
+            <artifactId>morphia-core</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>2.0.7</version> 
@@ -47,7 +52,7 @@
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver-sync</artifactId>
-            <version>5.1.1</version> 
+            <version>4.7.0</version>
         </dependency>
  
         <dependency>
